@@ -1,3 +1,8 @@
+2006-10-18       Gaius Mulley <gaius@gnu.org>
+
+	* gm2/gm2-config.in:  added.
+	* gm2/Make-lang.in:  include gm2/gm2-config.
+
 2006-10-17       Gaius Mulley <gaius@gnu.org>
 
 	* gm2/aclocal.m4:  added.
